--- a/public/teaching/python/index.html
+++ b/public/teaching/python/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- This site was created with Hugo Blox. https://hugoblox.com -->
-<!-- Last Published: June 8, 2024 --><html lang="en-us" dir="ltr"
+<!-- Last Published: June 9, 2024 --><html lang="en-us" dir="ltr"
       data-wc-theme-default="system">
   
 <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
@@ -185,9 +185,9 @@
     <meta property="twitter:site" content="@GetResearchDev" />
     <meta property="twitter:creator" content="@GetResearchDev" />
   
-  <meta property="og:site_name" content="Hugo Academic CV Theme" />
+  <meta property="og:site_name" content="Víctor Elvira&#39;s personal webpage" />
   <meta property="og:url" content="http://localhost:1313/teaching/python/" />
-  <meta property="og:title" content="Learn Python | Hugo Academic CV Theme" />
+  <meta property="og:title" content="Learn Python | Víctor Elvira&#39;s personal webpage" />
   <meta property="og:description" content="Easily learn Python in 10 minutes!" /><meta property="og:image" content="http://localhost:1313/teaching/python/featured.jpg" />
     <meta property="twitter:image" content="http://localhost:1313/teaching/python/featured.jpg" /><meta property="og:locale" content="en-us" />
   
@@ -207,7 +207,7 @@
   
 
 
-  <title>Learn Python | Hugo Academic CV Theme</title>
+  <title>Learn Python | Víctor Elvira&#39;s personal webpage</title>
 
   
   
@@ -759,8 +759,8 @@
   <nav class="navbar px-3 flex justify-left">
     <div class="order-0 h-100">
       
-      <a class="navbar-brand" href="/" title="Hugo Academic CV Theme">
-        Your Name
+      <a class="navbar-brand" href="/" title="Víctor Elvira&#39;s personal webpage">
+        Víctor Elvira
       </a>
     </div>
     
@@ -1516,7 +1516,7 @@ data.head()
 
   
   <p class="powered-by text-center">
-    © 2024 Me. This work is licensed under <a href="https://creativecommons.org/licenses/by-nc-nd/4.0" rel="noopener noreferrer" target="_blank">CC BY NC ND 4.0</a>
+    © 2024 Víctor Elvira.
   </p>
   
 
