--- a/public/publication_types/article-journal/index.html
+++ b/public/publication_types/article-journal/index.html
@@ -508,6 +508,11 @@
   
   
   
+  
+  
+  
+  
+  
 
 
 
@@ -1041,6 +1046,30 @@
       <p class="block mt-1 text-sm leading-tight font-medium text-black dark:text-white">
         </p>
       <p class="mt-2 text-gray-500 dark:text-gray-400 text-sm">Jan 1, 2021</p>
+    </div>
+  </div>
+</a>
+
+  
+  
+
+
+
+
+
+
+
+
+<a href="/publication/elvira-2017-improving/"  class="mb-5">
+  <div class="md:flex">
+    <div class="md:flex-shrink-0 overflow-hidden">
+      
+    </div>
+    <div class="p-8">
+      <div class="uppercase tracking-wide text-md text-primary-700 dark:text-primary-200 font-semibold">Improving Population Monte Carlo: Alternative Weighting and Resampling Schemes</div>
+      <p class="block mt-1 text-sm leading-tight font-medium text-black dark:text-white">
+        </p>
+      <p class="mt-2 text-gray-500 dark:text-gray-400 text-sm">Jan 1, 2017</p>
     </div>
   </div>
 </a>
