--- a/public/index.html
+++ b/public/index.html
@@ -1418,7 +1418,7 @@
 
       <div class="text-3xl font-bold mb-2 mt-6">Víctor Elvira</div>
 
-      <h3 class="font-semibold mb-1">Professor in Statistics and Data Science</h3>
+      <h3 class="font-semibold mb-1">Professor in Statistics</h3>
 
       
       <div class="mb-2">
