--- a/public/index.html
+++ b/public/index.html
@@ -1529,7 +1529,7 @@
       <div class="bio-text" >
         <h2 id="about-me">About Me</h2>
 <p>I am a Professor with a Personal Chair in Statistics and Data Science at the School of Mathematics, University of Edinburgh.
-I received the degree in Telecommunication Engineering, the M.Sc. degree in Communication Technologies, and the Ph.D. in Electrical Engineering from University of Cantabria.</p>
+I received x and y, the M.Sc. degree in Communication Technologies, and the Ph.D. in Electrical Engineering from University of Cantabria.</p>
 
       </div>
     </div>
