--- a/index.html
+++ b/index.html
@@ -1,184 +1,95 @@
+
 <!DOCTYPE html>
-
 <html lang="en">
-
-	<head>
-		<title>Bootstrap Tutorial Sample Page</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
-		<link rel="stylesheet" type="text/css" href="main.css">
-
-	</head>
-	
-	<body>
-	
-		<nav class="navbar navbar-expand-md">
-			<a class="navbar-brand" href="#">Logo</a>
-			<button class="navbar-toggler navbar-dark" type="button" data-toggle="collapse" data-target="#main-navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button>
-			<div class="collapse navbar-collapse" id="main-navigation">
-				<ul class="navbar-nav">
-					<li class="nav-item">
-						<a class="nav-link" href="./">Home</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="about.html">About</a>
-					</li>
-					<li class="nav-item">
-						<a class="nav-link" href="#">Contact</a>
-					</li>
-				</ul>
-			</div>
-		</nav>
-
-		<header class="page-header header container-fluid">
-			<div class="overlay"></div>
-			<div class="description">
-				<h1>Welcome to the Landing Page!</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis. Suspendisse consectetur mi id libero fringilla, in pharetra sem ullamcorper.</p>
-				<button class="btn btn-outline-secondary btn-lg">Tell Me More!</button>
-			</div>
-		</header>
-		
-		<div class="container features">
-			<div class="row">
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<h3 class="feature-title">Lorem ipsum</h3>
-					<img src="images/column-1.jpg" class="img-fluid">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6">
-					<h3 class="feature-title">Lorem ipsum</h3>
-					<img src="images/column-2.jpg" class="img-fluid">
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-6">	
-					<h3 class="feature-title">Get in Touch!</h3>
-					<div class="form-group">
-						<input type="text" class="form-control" placeholder="Name" name="">
-					</div>
-					<div class="form-group">
-						<input type="email" class="form-control" placeholder="Email Address" name="email">
-					</div>
-					<div class="form-group">
-						<textarea class="form-control" rows="4"></textarea>
-					</div>
-					<input type="submit" class="btn btn-secondary btn-block" value="Send" name="">
-				</div>
-			</div> 
-		</div>
-		
-		<div class="background">
-			<div class="container team">
-				<div class="row">
-					<div class="card col-lg-3 col-md-3 col-sm-4 text-center">
-						<img class="card-img-top rounded-circle" src="images/team-image-1.png" alt="Card image">
-						<div class="card-body">
-							<h4 class="card-title">Jane Doe</h4>
-							<p class="card-text">Job Description</p>
-						</div>
-					</div>
-					<div class="card col-lg-3 col-md-3 col-sm-4 text-center">
-						<img class="card-img-top rounded-circle" src="images/team-image-2.png" alt="Card image">
-						<div class="card-body">
-							<h4 class="card-title">John Doe</h4>
-							<p class="card-text">Job Description</p>
-						</div>
-					</div>
-					<div class="card col-lg-3 col-md-3 col-sm-4 text-center">
-						<img class="card-img-top rounded-circle" src="images/team-image-1.png" alt="Card image">
-						<div class="card-body">
-							<h4 class="card-title">Jane Doe</h4>
-							<p class="card-text">Job Description</p>
-						</div>
-					</div>
-					<div class="card col-lg-3 col-md-3 col-sm-4 text-center">
-						<img class="card-img-top rounded-circle" src="images/team-image-2.png" alt="Card image">
-						<div class="card-body">
-							<h4 class="card-title">John Doe</h4>
-							<p class="card-text">Job Description</p>
-						</div>
-					</div>
-					<div class="card col-lg-3 col-md-3 col-sm-4 text-center">
-						<img class="card-img-top rounded-circle" src="images/team-image-1.png" alt="Card image">
-						<div class="card-body">
-							<h4 class="card-title">Jane Doe</h4>
-							<p class="card-text">Job Description</p>
-						</div>
-					</div>
-					<div class="card col-lg-3 col-md-3 col-sm-4 text-center">
-						<img class="card-img-top rounded-circle" src="images/team-image-2.png" alt="Card image">
-						<div class="card-body">
-							<h4 class="card-title">John Doe</h4>
-							<p class="card-text">Job Description</p>
-						</div>
-					</div>
-					<div class="card col-lg-3 col-md-3 col-sm-4 text-center">
-						<img class="card-img-top rounded-circle" src="images/team-image-1.png" alt="Card image">
-						<div class="card-body">
-							<h4 class="card-title">Jane Doe</h4>
-							<p class="card-text">Job Description</p>
-						</div>
-					</div>
-					<div class="card col-lg-3 col-md-3 col-sm-4 text-center">
-						<img class="card-img-top rounded-circle" src="images/team-image-2.png" alt="Card image">
-						<div class="card-body">
-							<h4 class="card-title">John Doe</h4>
-							<p class="card-text">Job Description</p>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
-		
-		<footer class="page-footer">
-			<div class="container">
-				<div class="row">
-					<div class="col-lg-8 col-md-8 col-sm-12">
-					<h6 class="text-uppercase font-weight-bold">Additional Information</h6>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu. Sed aliquet dolor id sapien rutrum, id vulputate quam iaculis.</p>
-				</div>
-				<div class="col-lg-4 col-md-4 col-sm-12">
-					<h6 class="text-uppercase font-weight-bold">Contact</h6>
-					<p>1640 Riverside Drive, Hill Valley, California
-					<br/>info@mywebsite.com
-					<br/>+ 01 234 567 88
-					<br/>+ 01 234 567 89</p>
-				</div>
-			</div>
-			<div class="footer-copyright text-center">© 2024 Copyright: Víctor Elvira</div>
-		</footer>
-		
-		<script src="jquery-3.5.1.min.js"></script>
-		<script src="bootstrap/js/bootstrap.min.js"></script>
-		<script src="main.js"></script>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Your Academic CV Website">
+    <title>Academic CV - Your Name</title>
     
-	<!-- 	<div id="demo-modal" class="modal fade">
-			<div class="modal-dialog modal-lg modal-dialog-centered">
-				<div class="modal-content">
-					<div class="modal-header">
-						<img class="rounded-circle mx-auto" src="images/email-icon.png" alt="modal image">
-						<button type="button" class="close" data-dismiss="modal" aria-label="close">
-							<span>x</span>
-						</button>
-					</div>
-					<div class="modal-body text-center">
-						<h4>Subscribe to our newsletter</h4>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque interdum quam odio, quis placerat ante luctus eu.</p>
-						<div class="input-group">
-							<input type="email" class="form-control" placeholder="Enter your email address" name="email">
-							<div class="input-group-append">
-								<input type="submit" class="btn" value="Subscribe">
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div> -->
-		
-	</body>
-	
+    <!-- Bootstrap 5 CSS -->
+    <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">-->
+    <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/lumen/bootstrap.min.css" rel="stylesheet">
+
+    
+    <!-- Custom CSS -->
+    <link href="assets/css/styles.css" rel="stylesheet">
+</head>
+<body>
+
+<!-- Navigation Bar -->
+<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <div class="container">
+        <a class="navbar-brand" href="#">Your Name</a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto">
+                <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
+                <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
+                <li class="nav-item"><a class="nav-link" href="teaching.html">Teaching</a></li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
+<!-- Header Section with Two Columns -->
+<header class="bg-primary text-white text-center py-5">
+    <div class="container-fluid">
+        <div class="row">
+            <!-- Left column for profile picture, name, position, university, and social media icons -->
+            <div class="col-md-4 text-center">
+                <img src="assets/images/profile.jpg" alt="Profile Picture" class="rounded-circle mb-3" width="150">
+                <h4>Your Name</h4>
+                <p>Your Position</p>
+                <p>Your University</p>
+                <div>
+                    <a href="#"><i class="bi bi-twitter"></i></a>
+                    <a href="#"><i class="bi bi-linkedin"></i></a>
+                    <a href="#"><i class="bi bi-github"></i></a>
+                </div>
+            </div>
+            <!-- Right column for About Me with two sub-columns for Interests and Education -->
+            <div class="col-md-8">
+                <h2>About Me</h2>
+                <p>Write your detailed biography here, including your academic focus and professional journey.</p>
+                <div class="row mt-4">
+                    <!-- Left sub-column for Interests -->
+                    <div class="col-md-6">
+                        <h4>Interests</h4>
+                        <ul>
+                            <li>Interest 1</li>
+                            <li>Interest 2</li>
+                            <li>Interest 3</li>
+                        </ul>
+                    </div>
+                    <!-- Right sub-column for Education -->
+                    <div class="col-md-6">
+                        <h4>Education</h4>
+                        <ul>
+                            <li>Ph.D. in Field - University, Year</li>
+                            <li>M.Sc. in Field - University, Year</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</header>
+<!-- Footer -->
+<footer class="bg-dark text-white py-4">
+    <div class="container text-center">
+        <p>&copy; 2024 Your Name. All rights reserved.</p>
+    </div>
+</footer>
+
+<!-- Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Custom JS -->
+<script src="assets/js/scripts.js"></script>
+
+</body>
 </html>
