--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <!-- Navigation Bar -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Your Name</a>
+        <a class="navbar-brand" href="#">Víctor Elvira</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,9 +42,9 @@
             <!-- Left column for profile picture, name, position, university, and social media icons -->
             <div class="col-md-4 text-center">
                 <img src="assets/images/profile.jpg" alt="Profile Picture" class="rounded-circle mb-3" width="150">
-                <h4>Your Name</h4>
-                <p>Your Position</p>
-                <p>Your University</p>
+                <h4>Víctor Elvira</h4>
+                <p>Professor in Statistics and Data Science</p>
+                <p>University of Edinburgh</p>
                 <div>
                     <a href="#"><i class="bi bi-twitter"></i></a>
                     <a href="#"><i class="bi bi-linkedin"></i></a>
@@ -54,15 +54,16 @@
             <!-- Right column for About Me with two sub-columns for Interests and Education -->
             <div class="col-md-8">
                 <h2>About Me</h2>
-                <p>Write your detailed biography here, including your academic focus and professional journey.</p>
+                <p align="justify"> I am a Professor with a Personal Chair in Statistics and Data Science at the School of Mathematics, University of Edinburgh. I received the degree in Telecommunication Engineering, the M.Sc. degree in Communication Technologies, and the Ph.D. in PhD in Statistical Signal Processing from University of Cantabria.</p>
                 <div class="row mt-4">
                     <!-- Left sub-column for Interests -->
                     <div class="col-md-6">
                         <h4>Interests</h4>
                         <ul>
-                            <li>Interest 1</li>
-                            <li>Interest 2</li>
-                            <li>Interest 3</li>
+                            <li>Computational statistics 1</li>
+                            <li>Statistical signal processing</li>
+                            <li>Probabilistic machine learning</li>
+                            <li>Artificial intelligence</li>
                         </ul>
                     </div>
                     <!-- Right sub-column for Education -->
