--- a/index.html
+++ b/index.html
@@ -15,10 +15,11 @@
     <!-- Custom CSS -->
     <link href="assets/css/styles.css" rel="stylesheet">
 </head>
-<body>
+<body> 
 
 <!-- Navigation Bar -->
-<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+<div id="navbar-placeholder"></div>
+<!-- <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container">
         <a class="navbar-brand" href="#">Víctor Elvira</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +34,7 @@
             </ul>
         </div>
     </div>
-</nav>
+</nav> -->
 
 <!-- Header Section with Two Columns -->
 <header class="bg-primary text-white text-center py-5">
@@ -82,7 +83,7 @@
 <!-- Footer -->
 <footer class="bg-dark text-white py-4">
     <div class="container text-center">
-        <p>&copy; 2024 Your Name. All rights reserved.</p>
+        <p>&copy;  <span id="currentYear"></span> Víctor Elvira. All rights reserved.</p>
     </div>
 </footer>
 
