--- a/nav.html
+++ b/nav.html
@@ -1,13 +1,14 @@
 <!-- nav.html -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container">
-        <a class="navbar-brand" href="#">Your Name</a>
+        <a class="navbar-brand" href="#">Víctor Elvira</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+                <li class="nav-item"><a class="nav-link" href="index.html#awards">Awards</a></li>
                 <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
                 <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
                 <li class="nav-item"><a class="nav-link" href="teaching.html">Teaching</a></li>
