--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
             <!--<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">-->
             <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/flatly/bootstrap.min.css" rel="stylesheet">
 
+            <!-- Icon library-->
+            <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+
+
             
             <!-- Custom CSS -->
             <link href="assets/css/styles.css" rel="stylesheet">
@@ -47,10 +51,16 @@
                         <h4>Víctor Elvira</h4>
                         <p>Professor in Statistics and Data Science</p>
                         <p>University of Edinburgh</p>
-                        <div>
-                            <a href="#"><i class="bi bi-twitter"></i></a>
-                            <a href="#"><i class="bi bi-linkedin"></i></a>
-                            <a href="#"><i class="bi bi-github"></i></a>
+                        <div class="social-icons mt-3">
+                            <a href="https://twitter.com/yourprofile" target="_blank" class="me-3">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                            <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="https://github.com/yourprofile" target="_blank" class="me-3">
+                                <i class="fab fa-github"></i>
+                            </a>
                         </div>
                     </div>
                     <!-- Right column for About Me with two sub-columns for Interests and Education -->
@@ -111,27 +121,29 @@
                             <td><img src="assets/logos/mc_1.jpg" alt="Image 2" width="160"></td>
                             </tr>
                         </table> -->
-                        <div class="container py-5">
+ 
+
+                        <div class="container py-4">
                           <div class="row">
-                            <!-- First Row of Logos -->
-                            <div class="col-6 col-md-4 text-center">
+                            <!-- First Row of Logos with more space -->
+                            <div class="col-6 col-md-4 text-center mb-4 mb-md-2">
                               <img src="assets/logos/eurasip.png" alt="EURASIP Logo" class="img-fluid" width="160">
                             </div>
-                            <div class="col-6 col-md-4 text-center">
+                            <div class="col-6 col-md-4 text-center mb-4 mb-md-2">
                               <img src="assets/logos/ellis.png" alt="ELLIS Logo" class="img-fluid" width="160">
                             </div>
-                            <div class="col-6 col-md-4 text-center">
+                            <div class="col-6 col-md-4 text-center mb-4 mb-md-2">
                               <img src="assets/logos/LH.jpeg" alt="Leverhulme Logo" class="img-fluid" width="160">
                             </div>
 
-                            <!-- Second Row of Logos -->
-                            <div class="col-6 col-md-4 text-center">
+                            <!-- Second Row of Logos with more space -->
+                            <div class="col-6 col-md-4 text-center mb-4 mb-md-2">
                               <img src="assets/logos/turing.png" alt="Turing Institute Logo" class="img-fluid" width="160">
                             </div>
-                            <div class="col-6 col-md-4 text-center">
+                            <div class="col-6 col-md-4 text-center mb-4 mb-md-2">
                               <img src="assets/logos/fulbright_logo.png" alt="Fulbright Logo" class="img-fluid" width="160">
                             </div>
-                            <div class="col-6 col-md-4 text-center">
+                            <div class="col-6 col-md-4 text-center mb-4 mb-md-2">
                               <img src="assets/logos/mc_1.jpg" alt="Marie Curie Logo" class="img-fluid" width="160">
                             </div>
                           </div>
@@ -139,6 +151,7 @@
 
          
 
+                        <div class="container py-4">
 
             <h3>Other responsibilities</h3>
                       <h4>Editorial duties</h4>
@@ -154,6 +167,8 @@
                             <li> Elected member of the <a href="https://www.eurasip.org/index.php?option=com_content&view=article&id=146&Itemid=1145">Theoretical and Methodological Trends in Signal Processing Technical Area Committee </a>  at the <a href="https://www.eurasip.org/">European Association for Signal Processing (EURASIP)</a>,   (2019-).</li>
                           </ul>
            </div>
+                                   </div>
+
         </section>
 
         <!-- Footer -->
