--- a/index.html
+++ b/index.html
@@ -51,14 +51,15 @@
                         <h4>Víctor Elvira</h4>
                         <p>Professor in Statistics and Data Science</p>
                         <p>University of Edinburgh</p>
+                        <!-- Social Media Icons in Header -->
                         <div class="social-icons mt-3">
-                            <a href="https://twitter.com/yourprofile" target="_blank" class="me-3">
+                            <a href="https://twitter.com/yourprofile" target="_blank">
                                 <i class="fab fa-twitter"></i>
                             </a>
-                            <a href="https://linkedin.com/in/yourprofile" target="_blank" class="me-3">
+                            <a href="https://linkedin.com/in/yourprofile" target="_blank">
                                 <i class="fab fa-linkedin"></i>
                             </a>
-                            <a href="https://github.com/yourprofile" target="_blank" class="me-3">
+                            <a href="https://github.com/yourprofile" target="_blank">
                                 <i class="fab fa-github"></i>
                             </a>
                         </div>
