--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
 <!-- footer.html -->
 <footer class="bg-dark text-white py-4">
     <div class="container text-center">
-        <p>&copy;  <span id="currentYear"></span> Víctor Elvira. All rights reserved.</p>
+        <p>&copy;  <span id="currentYear"></span> Víctor Elvira. All rights reserved. Version: <span id="currentYear"></span> </p>
     </div>
 </footer>
