--- a/nav.html
+++ b/nav.html
@@ -10,8 +10,8 @@
                 <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
                 <li class="nav-item"><a class="nav-link" href="index.html#awards">Awards</a></li>
                 <li class="nav-item"><a class="nav-link" href="publications.html">Publications</a></li>
-                <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
-                <li class="nav-item"><a class="nav-link" href="teaching.html">Teaching</a></li>
+   <!--              <li class="nav-item"><a class="nav-link" href="research.html">Research</a></li>
+                <li class="nav-item"><a class="nav-link" href="teaching.html">Teaching</a></li> -->
             </ul>
         </div>
     </div>
