--- a/index.html
+++ b/index.html
@@ -89,13 +89,23 @@
                         </div>
                     </div>
                     <!-- Right column for About Me with two sub-columns for Interests and Education -->
-                    <div class="col-md-8">
+                    <div class="col-md-6">
                         <h2>About Me</h2>
-                        <p align="justify"> I am a Professor with a Personal Chair in Statistics and Data Science at the School of Mathematics, University of Edinburgh. I received the degree in Telecommunication Engineering, the M.Sc. degree in Communication Technologies, and the Ph.D. in PhD in Statistical Signal Processing from University of Cantabria.</p>
+                        <h4 align="justify">Short bio</h4>
+                        <p align="justify">
+                            I am a Professor with a Personal Chair in Statistics and Data Science at the School of Mathematics, University of Edinburgh. I received the degree in Telecommunication Engineering, the M.Sc. degree in Communication Technologies, and the Ph.D. in Statistical Signal Processing from University of Cantabria.
+                        </p>
                         <div class="row mt-4">
                             <!-- Left sub-column for Interests -->
-                            <div class="col-md-6">
-                                <h4 >Interests</h4>
+                            <div class="col-md-8">
+                                <h4 align="justify">Interests</h4> 
+                                <p align="justify">
+                                    My research interests are in statistical signal processing and computational statistics. My work covers diverse topics in these areas, including Monte Carlo methods, Bayesian inference in static and dynamical models, signal processing for biomedical applications, and wireless communications. Most of my recent (and ongoing!) work is in importance sampling methodology, e.g. multiple importance sampling, adaptive importance sampling, or sequential Monte Carlo (particle filtering).
+                                </p>
+                            </div>
+                            <!-- Right sub-column for Education -->
+                            <div class="col-md-4">
+                                <h4 align="justify">Keywords</h4>
                                 <ul align="justify">
                                     <li>Computational statistics</li>
                                     <li>Statistical signal processing</li>
@@ -103,14 +113,6 @@
                                     <li>Artificial intelligence</li>
                                 </ul>
                             </div>
-                            <!-- Right sub-column for Education -->
-        <!--                     <div class="col-md-6">
-                                <h4>Education</h4>
-                                <ul>
-                                    <li>Ph.D. in Field - University, Year</li>
-                                    <li>M.Sc. in Field - University, Year</li>
-                                </ul>
-                            </div> -->
                         </div>
                     </div>
                 </div>
@@ -118,8 +120,9 @@
         </header>
 
         <!-- Main Content Section -->
-        <section id="main-content" class="container my-1">
-        <div class="col-md-8">
+        <section id="main-content" class="container">
+        <div class="row">
+            <div class="col-md-6">
                           <h3 id="awards">Awards and recognitions</h3>     
 
                           <ul style="list-style-type: none; padding: 0;">
@@ -133,7 +136,7 @@
                               <li><b>2016</b> – Fulbright Fellow, <a href="http://fulbright-france.org/en"><em>Spanish-American Fulbright Commission</em></a></li>
                           </ul>
 
-                        
+                                    </div>
 <!--                         <table>
                           <tr>
                             <td><img src="assets/logos/eurasip.png" alt="Image 1" width="160"></td>
@@ -146,7 +149,7 @@
                             <td><img src="assets/logos/mc_1.jpg" alt="Image 2" width="160"></td>
                             </tr>
                         </table> -->
- 
+        <div class="col-md-6">
 
                         <div class="container py-4">
                           <div class="row">
@@ -174,16 +177,17 @@
                           </div>
                         </div>
 
-         
+                                             </div>
+
 
                         <div class="container py-4">
 
             <h3>Other responsibilities</h3>
                       <h4>Editorial duties</h4>
                           <ul>
-                            <li> Associate Editor of the <a href="https://signalprocessingsociety.org/publications-resources/ieee-transactions-signal-processing/editorial-board">IEEE Transactions on Signal Processing</a> (2020-).</li>
-                            <li>  Guest Editor of a  <a href="http://www.aimsciences.org/journal/A0000-0002/FoDS_Special4">special issue</a> in  <a href="https://www.aimsciences.org/journal/A0000-0002">Foundations of Data Science</a>  on Sequential Monte Carlo Methods (2021-2022).</li>
-                            <li>  Guest Editor of a special issue in <a href="https://asp-eurasipjournals.springeropen.com/">EURASIP Journal on Advances in Signal Processing</a>  on Monte Carlo methods (2017-2018).</li>
+                            <li> Associate Editor of the <a href="https://signalprocessingsociety.org/publications-resources/ieee-transactions-signal-processing/editorial-board">IEEE Transactions on Signal Processing</a> (2020-2025).</li>
+                            <li>  Guest Editor of a  <a href="http://www.aimsciences.org/journal/A0000-0002/FoDS_Special4">special issue</a> in  <a href="https://www.aimsciences.org/journal/A0000-0002">Foundations of Data Science</a>  on Sequential Monte Carlo Methods (2023-2025).</li>
+                            <li>  Guest Editor of a special issue in <a href="https://asp-eurasipjournals.springeropen.com/">EURASIP Journal on Advances in Signal Processing</a> on Monte Carlo methods (2017-2018).</li>
                           </ul> 
 
                           <h4>Committees</h4>
