all tabs 1st time
all tabs, publications old

--- a/template.html
+++ b/template.html
@@ -18,26 +18,9 @@
 
 <!-- Main content section (Empty) -->
 <div class="container py-5">
-    <h2>Personal</h2>
-         
-    <div id="content">
-        <h4>Video</h4>
-        <ul>
-            <li><a href="https://www.youtube.com/channel/UCs45AVuKHUunInrQSeLLtVw">YouTube Channel</a></li>
-        </ul>
-
-        <h4>Photography</h4>
-        <ul>
-            <li><a href="https://www.flickr.com/photos/victelv/">My Flickr account</a></li>
-        </ul>
-
-        <h4>Blogging</h4>
-        <ul>
-            <li><a href="http://dandounavuelta.wordpress.com/">My travel blog (in Spanish)</a></li>
-        </ul>
-    </div>
+    <h2>Empty Template</h2>
+    <p>This is where you can start adding your custom content.</p>
 </div>
-
 
 <!-- Load Footer -->
 <div id="footer-placeholder"></div>
