--- a/nav.html
+++ b/nav.html
@@ -1,3 +1,6 @@
+<!-- template of bootswatch -->
+<link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/flatly/bootstrap.min.css" rel="stylesheet">
+
 <!-- nav.html -->
 <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
     <div class="container">
