--- a/publications.html
+++ b/publications.html
@@ -5,17 +5,19 @@
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <title>Publications</title>
 
-      <!-- Bootstrap CSS -->
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+      <!-- CSS -->
+      <link href="assets/css/styles.css" rel="stylesheet">       <!-- Custom CSS -->
+      <!-- Bootstrap 5 CSS -->
+      <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+      <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/flatly/bootstrap.min.css" rel="stylesheet">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css">
 
-      <!-- jQuery (Required for bibtex_js) -->
-      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-      <!-- Load bibtex-js -->
-      <script type="text/javascript" src="assets/js/bibtex_js.js"></script>
-
-      <!-- Custom JS (scripts.js to load the navbar and footer) -->
-      <script src="assets/js/scripts.js"></script>
+      <!-- JS -->
+      <script src="assets/js/scripts.js"></script> <!-- Custom JS (scripts.js to load the navbar and footer) -->
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- jQuery (Required for bibtex_js) -->
+      <script type="text/javascript" src="assets/js/bibtex_js.js"></script> <!-- Load bibtex-js -->
 
   </head>
   <body>
@@ -24,19 +26,21 @@
   <div id="navbar-placeholder"></div>
 
   <!-- Publications Section -->
-  <div class="container py-5">
-      <h1>Publications</h1>
+  <div class="container py-3">
+
+    <div class="row">
+      <h2>Publications</h2>
     
-        <div id="content">
+        <!-- <div id="content"> -->
+          <div class="container-fluid" mt-3>
           <!-- insert the page content here -->
 
 
           All my publications are open access and can be found either below or in my <a href="http://scholar.google.es/citations?user=0V_-F5sAAAAJ">Google Scholar</a> profile.
 
 
-          <h2>Journal papers</h2>
- 
-          <ol reversed start="70">
+          <h4>Journal papers</h4>
+           <ol reversed start="70">
 
 
   <li> E. Chouzenoux and V. Elvira, "Sparse Graphical Linear Dynamical Systems", Journal of Machine Learning Research, Vol. 25, No. 223, pp. 1-53, 2024.
@@ -445,7 +449,7 @@
 
 
           </ol>
-          <h2>Refereed conference papers</h2>
+          <h4>Refereed conference papers</h4>
 
 
    
@@ -854,7 +858,7 @@
                       src="assets/favicons/application-pdf.png"> <a href="./papers/santamaria2008_optimal_pre.pdf"
                       type="application/pdf; length=562059">[pdf]</a></span>&nbsp;</span></nobr>
           </ol>
-          <h2>Book chapters</h2>
+          <h4>Book chapters</h4>
           <!-- <h4>2015</h4> -->
           <ul>
 
@@ -867,7 +871,7 @@
               <!-- <a href="http://scholar.google.com/scholar?btnG=Search%2BScholar&as_q=%22Low-Cost%2Band%2BCompact%2BRF-MIMO%2BTransceivers%22&as_occt=any&as_epq=&as_oq=&as_eq=&as_publication=&as_ylo=&as_yhi=&as_sdtAAP=1&as_sdtp=1" title="Click to search Google Scholar for this entry" target="_blank">Google Scholar</a>
             <a href="./bibtex/ch1.bib" rel="nofollow">BibTex</a> -->
           </ul>
-          <h2>PhD dissertation</h2>
+          <h4>PhD dissertation</h4>
           <!-- <h4>2011</h4> -->
           <ul>
             <li> V. Elvira, Baseband processing in analog combining MIMO systems: from theoretical design to FPGA
@@ -881,7 +885,7 @@
           </ul>
         </div>
       </div>
-
+    </div>
   <!-- Footer -->
   <div id="footer-placeholder"></div>
 
