--- a/software.html
+++ b/software.html
@@ -5,11 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Víctor Elvira's webpage</title>
 
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+      <!-- CSS -->
+      <link href="assets/css/styles.css" rel="stylesheet">       <!-- Custom CSS -->
+      <!-- Bootstrap 5 CSS -->
+      <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"> -->
+      <link href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.0/dist/flatly/bootstrap.min.css" rel="stylesheet">
+      <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/academicons@1.9.1/css/academicons.min.css">
 
-    <!-- Custom JS (scripts.js to load the navbar and footer) -->
-    <script src="assets/js/scripts.js"></script>
+
+      <!-- JS -->
+      <script src="assets/js/scripts.js"></script> <!-- Custom JS (scripts.js to load the navbar and footer) -->
+      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- jQuery (Required for bibtex_js) -->
+      <script type="text/javascript" src="assets/js/bibtex_js.js"></script> <!-- Load bibtex-js -->
 </head>
 <body>
 
