--- a/nyc.html
+++ b/nyc.html
@@ -6,7 +6,7 @@
     <title>Redirecting...</title>
     <script type="text/javascript">
         // Immediate redirect to the target page
-        window.location.href = "./projects/nyc.html";
+        window.location.href = "/projects/nyc.html";
     </script>
 </head>
 <body>
